# EPL445_MobileViT

./: .gitattributes  .gitignore  EPL445_Final_MobileViT_Presentation.pptx  EPL445_Interim2_MobileViT_Presentation.pptx  README.md  TASKS.md  pyproject.toml  requirements.txt
configs/: default.yaml  demo.yaml  eval.yaml  train.yaml
data/splits/: test.csv  train.csv  val.csv
docs/: demo_flow.md  final_presentation_script_slides1-9_gr.md  phase3_roadmap.md  presentation_script_slides5-8_gr.md
docs/paper/: EPL445_Final_Paper.docx  build_docx.js  paper.md
notebooks/: MobileViT_Traffic_Demo.ipynb
outputs/: verify_demo.py  webapp_test.py
outputs/metrics/: test_metrics.json  training_history.csv
scripts/: benchmark.py  extract_frames.py  fetch_videos.bat  fetch_videos.ps1  fetch_videos.sh  filter_small_crops.py  fix_splits_sequence_level.py  gen_background.py  generate_final_pptx.py  generate_interim2_pptx.py  mediamtx.yml  prepare_dataset.py  run_dashboard.bat  run_dashboard.ps1  run_dashboard.py  run_dashboard.sh  run_demo.bat  run_demo.ps1  run_demo.sh  run_eval.bat  run_eval.ps1  run_eval.sh  run_train.bat  run_train.ps1  run_train.sh  start_rtsp.sh
src/: __init__.py
src/app/: __init__.py  analytics.py  inference_worker.py  jobs.py  main.py  models.py  rtsp.py  streamlit_app.py
src/datasets/: traffic_dataset_builder.py  transforms.py  video_frames_dataset.py
src/evaluation/: density_plot.py  evaluate.py  metrics.py  plots.py
src/inference/: aggregate_counts.py  (+5 more)
tests/: conftest.py  test_dashboard_e2e.py  test_dataset.py  test_metrics.py  test_model.py
(+13 files in other folders)
